--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -4,3 +4,14 @@
   <%= render :partial => "form" %>
 
 <% end %>
+
+<% if current_user.admin? %>
+  <%= form_tag @article.merge_url, :method => :post do %>
+    <div class=''>
+      <h4><%= _("Merge Articles") %></h4>
+      <%= label_tag :merge_with, 'Article ID' %>
+      <%= text_field_tag :merge_with %>
+      <%= submit_tag 'Merge' %>
+    </div>
+  <% end %>
+<% end %>
